Revision history for {{$dist->name}}

{{$NEXT}}

2.02      2018-06-11 19:17:08 -0400
  - Moved repository to the Perl5-Alien org

2.01      2017-03-22 15:30:53-04:00 America/New_York
  - Specify minimum version of Path::Tiny

2.00      2017-03-22 15:27:48-04:00 America/New_York
  - Migrate to Alien::Build + alienfile

v0.1.10   2016-07-12 11:58:51-04:00 America/New_York
  - Include dist metadata in JSON format

v0.1.9    2016-04-25 11:31:03-04:00 America/New_York
  - require Test::Alien 0.05 in t/ffi.t

v0.1.8    2016-01-29 10:25:53-05:00 America/New_York
   - metadata consistency and cleanup 

v0.1.7    2015-04-22 11:42:20-04:00 America/New_York
    - require Alien::Base 0.016 (needed for alien_stage_install)

v0.1.6    2015-04-22 07:36:15-04:00 America/New_York
    - use alien_stage_install

v0.1.5    2015-02-18 17:00:47-05:00 America/New_York
    - require Alien::Base 0.010
    - documentation improvements

v0.1.4    2014-10-24 10:06:13-04:00 America/New_York
    - command `make install' needs to be an install command of course,
      not a build command.
    - disable compiler check from Alien::Base which is pretty unreliable

v0.1.3    2014-10-14 08:17:26-04:00 America/New_York
    - Use Alien::patch for systems that don't provide patch

v0.1.2    2014-10-09 05:22:06-04:00 America/New_York
    - Fixed regression on some non-windows platforms where patch
      does not support --binary option

v0.1.1    2014-10-08 13:55:47-04:00 America/New_York
    - Better Windows support
    - Support for Perl 5.8.x

v0.1.0    2014-09-25 22:05:02-05:00 America/Chicago
    - Improved reliability of LibYAML build process (thanks Graham Ollis)

v0.0.7    2014-03-30 14:14:19CDT-0500 America/Chicago
    - Bumped version of libyaml from 0.1.5 to 0.1.6 following a security alert, found at http://www.ocert.org/advisories/ocert-2014-003.html (tokuhirom++).

v0.0.6    2014-03-21 13:06:39-05:00 America/Chicago
    - Changed download location to official location.